# fetcharr

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/phases/01-foundation/: 01-02-SUMMARY.md  01-03-PLAN.md
.planning/phases/02-search-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-web-ui/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-SUMMARY.md
.planning/phases/04-docker/: 04-01-SUMMARY.md  04-CONTEXT.md
.planning/phases/05-security-hardening/: 05-01-SUMMARY.md  05-VERIFICATION.md
.planning/phases/06-bug-fixes-and-resilience/: 06-01-PLAN.md  06-01-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
fetcharr/: __main__.py  config.py  db.py  log_buffer.py  logging.py  startup.py  state.py
fetcharr/clients/: __init__.py  base.py  radarr.py  sonarr.py
fetcharr/models/: arr.py  config.py
fetcharr/search/: __init__.py  engine.py  scheduler.py
fetcharr/static/css/: input.css  (+1 more)
fetcharr/templates/: base.html  dashboard.html  history.html  settings.html
fetcharr/web/: middleware.py  routes.py  validation.py
tests/: conftest.py  test_clients.py  test_config.py  test_db.py  test_log_buffer.py  test_logging.py  test_middleware.py  test_scheduler.py  test_search.py  test_startup.py  test_state.py  test_validation.py  test_web.py
(+83 files in other folders)
