[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fetcharr"
version = "0.1.0"
description = "Automated search triggering for Radarr and Sonarr"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings[toml]",
    "httpx",
    "loguru",
    "tomli-w",
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
fetcharr = "fetcharr.__main__:main"
