[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fetcharr"
version = "0.1.0"
description = "Automated search triggering for Radarr and Sonarr"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings[toml]",
    "httpx",
    "loguru",
    "tomli-w",
    "fastapi",
    "uvicorn[standard]",
    "apscheduler>=3.11,<4",
    "jinja2",
    "aiofiles",
    "aiosqlite",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytailwindcss",
    "ruff",
]

[project.scripts]
fetcharr = "fetcharr.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
